# RustOS

./: .gitignore  Cargo.toml  README.md  bios.cfg  build.rs  run_bios.sh  run_tests.sh  rust-toolchain.toml  setup.sh
.cargo/: config.toml
rust_kernel/: Cargo.toml  build.rs
rust_kernel/assets/: troll1.ppm  troll2.ppm
rust_kernel/assets/font/: font_render.py  noto_sans_mono.ppm
rust_kernel/assets/render/: fonts.py  images.py
rust_kernel/src/: apic.rs  apic_static.rs  apic_v2.rs  lib.rs  main.rs
rust_kernel/src/bins/: shell.rs
rust_kernel/src/bios/: global_descriptor_table.rs  interrupts.rs
rust_kernel/src/cpu/: gdt.rs
rust_kernel/src/driver/: keyboard.rs  logger.rs  qemu.rs  serial.rs
rust_kernel/src/driver/display/: cursor.rs  font.rs  frame_buffer.rs  image.rs
rust_kernel/src/driver/interrupts/: interrupts_handlers.rs
rust_kernel/src/driver/interrupts/controller/: apic.rs  pic.rs
rust_kernel/src/memory/: frame_allocator.rs  heap_allocator.rs
rust_kernel/src/memory/allocator/: fixed_size_block.rs
rust_kernel/src/utils/: color.rs  locked.rs
src/: lib.rs  main.rs  statics.rs  vga_buffer.rs
src/binaries/: builtin_shell_commands.rs  shell.rs
src/driver/: keyboard.rs  qemu.rs  serial.rs  vga.rs  vga_driver.rs
src/kernel/: allocator.rs  global_descriptor_table.rs  interrupts.rs  io.rs  memory.rs  panic.rs
src/kernel/memory/: frame_allocator.rs  heap_allocator.rs
src/kernel/memory/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/test/: tester.rs
src/utils/: color.rs  statics.rs
tests/: basic_boot.rs  heap_allocator.rs  interrupts.rs  should_fail.rs  stack_overflow.rs  vga.rs
