[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"
authors = [
    "Voinea Radu <contact@voinearadu.com>"
]

[dependencies]
bootloader = { "version" = "=0.9.29", features = ["map_physical_memory"] }
volatile = "=0.2.7"
spin = "=0.5.2"
x86_64 = "=0.15.1"
uart_16550 = "=0.3.1"
pic8259 = "=0.10.1"
pc-keyboard = "=0.7.0"
linked_list_allocator = "=0.9.0"
hashbrown = { version = "0.14.5" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    #    "-display", "none" # Commnet this if you want to enable the qemu window while running tests
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 30

[[test]]
name = "stack_overflow"
harness = false
