[package]
name = "rust_os"
version = "1.0.0"
edition = "2021"
authors = [
    "Voinea Radu <contact@voinearadu.com>"
]

[build-dependencies]
bootloader = "=0.11.7"
rust_kernel = { path = "rust_kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = ["rust_kernel"]