[package]
name = "rust_kernel"
version = "1.0.0"
edition = "2021"
authors = [
    "Voinea Radu <cotact@voinearadu.com>"
]
build = "build.rs"

[dependencies]
bootloader_api = "=0.11.7"
log = "0.4.22"
uart_16550 = "=0.3.1"
x86_64 = "=0.15.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "=0.5.2"
linked_list_allocator = "=0.9.0"
acpi = "=4.1.1"
pic8259 = "=0.11.0"

[features]
default = ["uefi"]
bios = []
uefi = []